@@ -1,6 +1,8 @@
 23 August 2016: Wouter
 	- Fix #804: unbound stops responding after outage.  Fixes queries
 	  that attempt to wait for an empty list of subqueries.
+	- Fix #804: lower num_target_queries for iterator also for failed
+	  lookups.
 
 8 August 2016: Wouter
 	- Note that OPENPGPKEY type is RFC 7929.
